--- a/index.html
+++ b/index.html
@@ -4,33 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ayaz Aybek - Purple Login</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
     <div id="div">
-
-        <p id="p">Giriş Yap</p> <hr color="lightgrey" id="hr">
-
+        <p id="p">Giriş Yap</p>
+        <hr class="hr">
         <form action="#">
-
             <input type="email" placeholder="E-Posta Adresi" id="email" autocomplete="off">
-
-            <input type="password" placeholder="Parola" id="password" autocomplete="off"><br>
-
-            <a href="#" id="a">Şifrenizi mi Unuttunuz?</a> <br>
-
-            <input type="button" value="Giriş Yap" id="button">
-
-
-
-
-
-
-
+            <input type="password" placeholder="Parola" id="password" autocomplete="off">
+            <a href="#" id="a">Şifrenizi mi Unuttunuz?</a>
+            <input type="button" value="Sign In" id="button">
+            <input type="button" value="Register" id="button-2">
         </form>
     </div>
-    
 </body>
 </html>
