--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div id="div">
-        <p id="p">Giriş Yap</p>
+        <p id="p">Login</p>
         <hr class="hr">
         <form action="#">
-            <input type="email" placeholder="E-Posta Adresi" id="email" autocomplete="off">
-            <input type="password" placeholder="Parola" id="password" autocomplete="off">
-            <a href="#" id="a">Şifrenizi mi Unuttunuz?</a>
+            <input type="email" placeholder="E-Mail Adress" id="email" autocomplete="off">
+            <input type="password" placeholder="Password" id="password" autocomplete="off">
+            <a href="#" id="a">Forget Password?</a>
             <input type="button" value="Sign In" id="button">
             <input type="button" value="Register" id="button-2">
         </form>
